--- a/MeuPrimeiroTeste/MyClassesTest/MyClassesTest.csproj
+++ b/MeuPrimeiroTeste/MyClassesTest/MyClassesTest.csproj
@@ -33,6 +33,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="FluentAssertions, Version=6.6.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+          <HintPath>..\packages\FluentAssertions.6.6.0\lib\netstandard2.0\FluentAssertions.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Configuration" />
         <Reference Include="System.Core" />
@@ -44,6 +47,7 @@
           <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.0\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
         </Reference>
         <Reference Include="System.Xml" />
+        <Reference Include="System.Xml.Linq" />
         <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c">
             <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
         </Reference>
@@ -59,8 +63,11 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="AssertClassTest.cs" />
+        <Compile Include="CollectionAssertClassTest.cs" />
         <Compile Include="FileProcessTest.cs" />
+        <Compile Include="PersonManagerTest.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="StringAssertClassTest.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\MyClasses\MyClasses.csproj">
