--- a/MeuPrimeiroTeste/MyClassesTest/packages.config
+++ b/MeuPrimeiroTeste/MyClassesTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="6.6.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net461" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
